--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,8 @@
-<% if @user.nil? %>
-    Nu exista user-ul cerut!
+<div>
+<%= link_to('Back to users','/users') %>
+</div>
+
 <% else %>
-    name:           <%= @user.name%><br>
-    email:          <%= @user.email%><br>
-    age:            <%= @user.age%><br>
-    gender:         <%= @user.gender%><br>
-    phone_number:   <%= @user.phone_number%>
+    <!--<%= render partial: 'user', locals: {user: @user}%>-->
+    <%= render @user%>
 <% end %>
