--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,42 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-        <%= link_to 'Twitter', '/' , class:'navlink' %> | 
-        <%= link_to 'Users', '/users' , class:'navlink' %> | 
-        <%= link_to 'Contact', '/contact' , class:'navlink' %> |
-        <%= link_to 'Sign Up', '/users/new' , class:'navlink' %>
+    <nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <%= link_to 'Twitter', '/' , class:'navbar-brand' %>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <% if logged_in? %>
+              <li class="nav-item">
+                <%= link_to 'Users', '/users', class: 'nav-link' %>
+              </li>
+            <% end %>
+            <!--<li class="nav-item">
+              <%= link_to 'Sign Up', '/users/new' , class:'nav-link' %>
+            </li>-->
+          </ul>
+
+          <% if logged_in? %>
+            <div class="navbar-nav pull-right">
+              <%= link_to 'Logout', logout_path, class: 'nav-link' %>
+            </div>
+            <div class="navbar-nav pull-right navlink">
+              <%= link_to(current_user.name,"/users/#{current_user.id}", class: 'nav-link') %>
+            </div>
+          <% else %>
+            <div class="navbar-nav pull-right">
+              <%= link_to 'Login', login_path, class: 'nav-link' %>
+            </div>
+            <div class="navbar-nav pull-right">
+              <%= link_to 'Sign Up', new_user_path , class:'nav-link' %>
+            </div>
+          <% end %>
+
         </div>
+      </div>
     </nav>
 
     <%= yield %>
