--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,8 @@
-<div class="card user-card">
+<div class="card user-card bg-info">
   <div class="card-body">
     <h5 class="card-title"><%= link_to(user.name,"/users/#{user.id}")%></h5>
     <p class="card-text">
-        email:         <%= user.email%><br>
+        email:          <%= user.email%><br>
         age:            <%= user.age%><br>
         gender:         <%= user.gender%><br>
         phone_number:   <%= user.phone_number%>
