--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,11 @@
-<h1>Users</h1>
-<ul>
-<% @users.each do |user| %>
-    <li>
-    <!--<%= render partial: 'user', locals: {user: user}%> -->
-    <%= render user%>
-    </li>
-<% end %>
-</ul>
+<body class="bg-dark">
+    <h1>Users</h1>
+    <ul class="list-group">
+    <% @users.each do |user| %>
+        <li class="list-group-item bg-dark">
+        <!--<%= render partial: 'user', locals: {user: user}%> -->
+        <%= render user%>
+        </li>
+    <% end %>
+    </ul>
+</body>
