--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,18 @@
-<div>
-<%= link_to('Back to users','/users') %>
-</div>
+<body class="bg-dark">
+    <% if flash[:success] %>
+        <div class="alert alert-success d-flex align-items-center" role="alert">
+            <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Success:"><use xlink:href="#check-circle-fill"/></svg>
+            <div class="success"> <%= flash[:success] %> </div>
+        </div>
+    <% end %>
+    <button class="btn">
+    <%= link_to('Back to users','/users') %>
+    </button>
 
-<% else %>
-    <!--<%= render partial: 'user', locals: {user: @user}%>-->
-    <%= render @user%>
-<% end %>
+    <% if @user.nil? %>
+        
+    <% else %>
+        <!--<%= render partial: 'user', locals: {user: @user}%>-->
+        <%= render @user%>
+    <% end %>
+</body>
