--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,13 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_importmap_tags %>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <%= link_to 'Twitter', '/' , class:'navbar-brand' %>
+        <%= link_to 'Twitter', root_path , class:'navbar-brand' %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,20 +21,25 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if logged_in? %>
               <li class="nav-item">
-                <%= link_to 'Users', '/users', class: 'nav-link' %>
+                <%= link_to 'Users', users_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Posts', posts_path, class: 'nav-link' %>
               </li>
             <% end %>
-            <!--<li class="nav-item">
-              <%= link_to 'Sign Up', '/users/new' , class:'nav-link' %>
-            </li>-->
+            <% if current_user && current_user.admin? %>
+              <li class="nav-item">
+                <%= link_to 'Admin Panel', admin_statistics_path, class: 'nav-link' %>
+              </li>
+            <% end %>
           </ul>
 
           <% if logged_in? %>
             <div class="navbar-nav pull-right">
-              <%= link_to 'Logout', logout_path, class: 'nav-link' %>
+              <%= link_to 'Logout', logout_path, data:{turbo_method: :delete}, class: 'nav-link' %>
             </div>
             <div class="navbar-nav pull-right navlink">
-              <%= link_to(current_user.name,"/users/#{current_user.id}", class: 'nav-link') %>
+              <%= link_to(current_user.name,user_path(current_user), class: 'nav-link') %>
             </div>
           <% else %>
             <div class="navbar-nav pull-right">
@@ -47,6 +53,7 @@
         </div>
       </div>
     </nav>
+
 
     <%= yield %>
   </body>
