--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,4 @@
-<div class="card user-card bg-info">
+<div class="card user-card bg-info", style="margin-left: 10px">
   <div class="card-body">
     <h5 class="card-title"><%= link_to(user.name,"/users/#{user.id}")%></h5>
     <p class="card-text">
@@ -7,5 +7,9 @@
         gender:         <%= user.gender%><br>
         phone_number:   <%= user.phone_number%>
     </p>
+    <% if current_user.admin? && !current_user?(user) && !user.admin? %>
+    <%= link_to 'Delete', user, data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class:'btn btn-danger' %>
+    <%= link_to 'Make Admin', user, data: {turbo_method: :patch, turbo_confirm: 'Are you sure?'}, class:'btn btn-warning' %>
+    <% end %>
   </div>
 </div>
