--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,21 +9,32 @@
     <%= link_to('Back to users','/users') %>
     </button>
 
-
-
     <div class ="row">
         <div class="col-md-4">
             <% if @user.nil? %>
-        
+
             <% else %>
-                <!--<%= render partial: 'user', locals: {user: @user}%>-->
                 <%= render @user%>
+                <% if current_user?(@user) %>
+                    <div class="p-3">
+                        <%= render partial: 'shared/error_messages', locals: {obj: @post} %>
+                        <%= form_with model:@post do |f| %>
+                            <%=f.label :title, class:'form-label text-white font-weight-bold'%>
+                            <%=f.text_field :title, class:'form-control', placeholder: 'Insert title...'%>
+
+                            <%=f.label :description, class:'form-label text-white font-weight-bold'%>
+                            <%=f.text_field :description, class:'form-control', placeholder: 'Insert content...'%>
+
+                            <%= f.submit 'Post', :class => 'btn btn-primary mt-2' %>
+                        <% end %>
+                <% end %>
+                </div>
             <% end %>
         </div>
         <div class="col-md-6">
-        <h3 class="text-white">Posts(<%=@posts.count%>)</h3>
-        <%= render @posts%>
-        <%= will_paginate(@posts, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: "pagination bg-transparent") %>
+            <h3 class="text-white">Posts(<%=@posts.count%>)</h3>
+            <%= render @posts%>
+            <%= will_paginate(@posts, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: "pagination bg-transparent") %>
         </div>
     </div>
 </body>
