--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,6 +5,8 @@
         description:    <%= post.description%><br>
         Posted by <%= link_to post.user.name, post.user %> <%= time_ago_in_words(post.updated_at) %> ago
     </p>
-    <%= link_to 'Edit', edit_post_path(post)%>
+    <% if current_user?(post.user) %>
+      <%= link_to 'Edit', edit_post_path(post), class: "btn btn-dark"%>
+    <% end %>
   </div>
 </div>
