--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,8 @@
 <body class="bg-dark">
-    <h1>Users</h1>
+    <h1 class="text-white">Users</h1>
     <ul class="list-group">
-    <% @users.each do |user| %>
         <li class="list-group-item bg-dark">
-        <!--<%= render partial: 'user', locals: {user: user}%> -->
-        <%= render user%>
+            <%= render @users%>
         </li>
-    <% end %>
     </ul>
 </body>
