--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,28 +5,32 @@
             <div class="success"> <%= flash[:success] %> </div>
         </div>
     <% end %>
+
     <button class="btn">
     <%= link_to('Back to users','/users') %>
     </button>
 
-    <div class ="row">
+    <div class="row">
         <div class="col-md-4">
             <% if @user.nil? %>
-
+                Nu exista userul cerut.
             <% else %>
-                <%= render @user%>
+                <%= render @user %>
+                <%= render partial: 'shared/stats'%>
                 <% if current_user?(@user) %>
-                    <div class="p-3">
-                        <%= render partial: 'shared/error_messages', locals: {obj: @post} %>
-                        <%= render partial: 'shared/post_form', locals: {obj: @post} %>
-                <% end %>
+                <div class="p-2">
+                    <%= render partial: 'shared/error_messages', locals: { obj: @post } %>
+                    <%= render partial: 'shared/post_form', locals: { obj: @post } %>
                 </div>
+                <% end %>
             <% end %>
         </div>
-        <div class="col-md-6">
-            <h3 class="text-white">Posts(<%=@posts.count%>)</h3>
-            <%= render @posts%>
+        <% if @user.present? %>
+            <div class="col-md-6">
+            <h3> Posts (<%= @posts.count%>)</h3>
+            <%= render @posts %>
             <%= will_paginate(@posts, :renderer => WillPaginate::ActionView::Bootstrap4LinkRenderer, class: "pagination bg-transparent") %>
-        </div>
-    </div>
+            </div>
+        <% end %>
+</div>
 </body>
