--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -7,16 +7,19 @@
     <p class="card-text">
         description:    <%= post.description%><br>
         Posted by <%= link_to post.user.name, post.user %> <%= time_ago_in_words(post.updated_at) %> ago <br>
-        <%= post.likes.count %> Likes
+        <%= post.likes.count %> Likes <br>
+        <%= post.comments.count%> Comments <br>
     </p>
+    <%= render post.comments%>
+
     <div class="btn-toolbar">
 
      <div class="btn-group mr-5">
         
 
-      <% pre_like = post.likes.find { |like| like.user_id == current_user.id} %>
-        <% if pre_like %>
-          <%= button_to 'Unlike', post_like_path(post, pre_like), method: :delete, class:'btn btn-danger' %>
+      <% post_like = post.likes.find { |like| like.user_id == current_user.id} %>
+        <% if post_like %>
+          <%= button_to 'Unlike', post_like_path(post, post_like), method: :delete, class:'btn btn-danger' %>
         <% else %>
           <%= button_to 'Like', post_likes_path(post), data: {turbo_method: :post}, class:'btn btn-primary' %>
         <% end %>
@@ -30,6 +33,8 @@
      </div>
 
     </div>
+
+    <%= render partial: 'shared/comment_form', locals: {obj: post} %>
     
   </div>
 </div>
